# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Stefan Krüger
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-ansi-escape-code"
description = "simple helper library for common ANSI escape codes"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Stefan Krüger", email = "git@s-light.eu"}
]
urls = {Homepage = "https://github.com/s-light/CircuitPython_ansi_escape_code"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "ansi_escape_code",
    "terminal,",
    "ANSI,",
    "color,",
    "position",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["ansi_escape_code"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
